# packaging-publishing-xwc21

./: .gitignore  LICENSE  mkdocs.yml  pyproject.toml
docs/src/cancer_prediction_xwc21/: cancer_model.md
src/cancer_prediction_xwc21/: cancer_model.py
src/cancer_prediction_xwc21/scripts/: app.py
tests/: test_CancerModel.py
