[project]
name = "cancer-prediction-xwc21"
version = "0.1.0"
description = "A basic cancer prediction model"
author = [{name = "Xian Wei Chua"}]
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.30.1",
]

[project.scripts]
cancer-prediction = "cancer_prediction_xwc21.scripts.run:cli"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true
